--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -28,11 +28,11 @@ h1 {
 
 }
 
-h2 {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: 400;
-  font-size: 24px
-}
+// h2 {
+//   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+//   font-weight: 400;
+//   font-size: 24px
+// }
 
 .login-form-container {
   display: flex;
@@ -44,6 +44,11 @@ h2 {
   border-radius: 10px;
   box-shadow: 0 0 10px 0 #000;
   margin: auto;
+    h2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 400;
+    font-size: 24px
+    }
 }
 
 ul.login-form {
@@ -78,21 +83,24 @@ ul.login-form p {
 }
 
 .guest-dashboard {
-  height: 500px;
-  margin: 2%;
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
   align-items: center;
+  width:100vh;
+  height: 50vh;
+  padding: 20px 30px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 0 #000;
+  margin: auto;
 }
 
 .guest-welcome-box {
-  background: white;
+  background: transparent;
   color: blue;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
 }
 
 
